--- a/views/Lucy/LucyHead.ejs
+++ b/views/Lucy/LucyHead.ejs
@@ -6,5 +6,10 @@
 <link rel="stylesheet" href="lib/w3css/w3.css">
 <link rel="stylesheet" href="lib/w3css/css.css">
 <link rel="stylesheet" href="lib/box.css" type="text/css">
-<link rel="stylesheet" href="lib/css/bootstrap.css">
+<link rel="stylesheet" href="lib/look/bootstrap/css/bootstrap.min.css">
+<script src="lib/look/bootstrap/js/jquery.js"></script>
+<script src="lib/look/bootstrap/js/popper.min.js"></script>
+<script src="lib/look/bootstrap/js/bootstrap.min.js"></script>
+
+
 
