--- a/views/lucy.ejs
+++ b/views/lucy.ejs
@@ -8,66 +8,15 @@
 
 		<div>
 			<% messages= chat %>
+			<% medias= history %>
+			<% beings= people %>
+			<% captions= translations %>
 			<% include Room/box.ejs%>
 		</div>
 		
 		<hr>
 
-		<p>Hello world</p>
-		http://revistero.teatredefum.net/post/2017/11/10/%5BLucy%5D-AIML-1-de-unos-cuantos
-		<strong>VIERNES</strong> TARDE<br>
-		---------------<br>
-		- Repositorio Lucy<br>
-		- Repositorio s-Alice<br>
-		- Sala de chat: screen.teatredefum.net/lucy --&gt; ejs | HTML5 | w3.css<br>
-		- Conocer a https://github.com/teatredefum/<strong>J.A.R.V.I.S</strong><br>
-		<br>
-		VIERNES NOCHE<br>
-		---------------<br>
-		- Unidad de procesamiento AIML --&gt; npm aiml | <strong>unit test</strong> :
-		sing a song<br>
-		- Demo <strong>s-Alice v 0.0.0</strong> An alice bot that sings a song named
-		<em>Knocking on heavens doors</em>.<br>
-		- Conocer a https://github.com/teatredefum/<strong>rosie</strong><br>
-		<br>
-		<strong>SABADO</strong> TARDE<br>
-		--------------<br>
-		- Unidad de procesamiento SPARQL --&gt; js client | <strong>unit test</strong>:
-		list some coders<br>
-		- Demo <strong>s-Alice v 0.0.1</strong> An alice bot that speaks sparql.<br>
-		- Conocer a https://github.com/teatredefum/<strong>iris</strong><br>
-		<br>
-		SABADO NOCHE<br>
-		------------<br>
-		- Unidad e procesamiento MPTT --&gt; mongoose-tree | <strong>unit
-		test</strong>: crud songs, crud coders<br>
-		- Demo <strong>s-Alice v 0.0.2</strong> An alice bot that speaks sparql and
-		remebers what's going on.<br>
-		- Conocer a https://github.com/teatredefum/<strong>sapereAudeBot</strong><br>
-		<br>
-		<strong>DOMINGO</strong> MAÑANA<br>
-		---------------<br>
-		- Conexión unidades de procesamiento --&gt; <strong>unit test</strong>: some
-		people chats on a room and Lucy skips turing test.<br>
-		- Demo <strong>Lucy v 0.0.0</strong> A chat room where you can talk to an alice
-		bot that speaks with Live.DBPedia on remote and with some local customizable
-		memory on local.<br>
-		- Conocer a https://github.com/teatredefum/<strong>rivescript</strong>-js<br>
-		<br>
-		DOMINGO TARDE<br>
-		-----------------<br>
-		- Unidad de exportación de conversaciones HTML | PDF --&gt; <strong>unit
-		test</strong>: A menu option to export current chat room history. A timeline
-		browser to open old conversations.<br>
-		- Demo Lucy <strong>v 0.0.1</strong> Lucy's memory is exportable to HMTL | PDF
-		format.<br>
-		- <em>Spare time</em>
-		https://github.com/teatredefum/<strong>awesome-selfhosted</strong><br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br></div>
+		
 	<!-- Insert Body here -->
 	<div class="container">
 
@@ -78,15 +27,6 @@
 	</div><!-- /.container -->
 
 	<% include Lucy/LucyFooter.ejs%>
-
-
-
-
-
-
-
-
-
 
 	</body>
 </html>
