Changed aiml to aiml-high, SmartAlice is on v000

--- a/views/Room/Being.ejs
+++ b/views/Room/Being.ejs
@@ -9,7 +9,7 @@
 			<div class="media-body">
 				<h5><%= message.mAuthor %> | <%= message.mText %> </h5>
 
-				<small class="text-muted"><%= message.mTime %></small>
+				<small class="text-muted"><%= message.mSkill %></small>
 			</div>
 		</div>
 
