--- a/views/lucy.ejs
+++ b/views/lucy.ejs
@@ -11,6 +11,7 @@
 			<% medias= history %>
 			<% beings= people %>
 			<% captions= translations %>
+			<% engine= roomUi %>
 			<% include Room/box.ejs%>
 		</div>
 		
