--- a/views/lucy.ejs
+++ b/views/lucy.ejs
@@ -11,7 +11,8 @@
 			<% medias= history %>
 			<% beings= people %>
 			<% captions= translations %>
-			<% engine= roomUi %>
+			<% being= being %>
+			<% room= room %>
 			<% include Room/box.ejs%>
 		</div>
 		
