--- a/views/Lucy/LucyHead.ejs
+++ b/views/Lucy/LucyHead.ejs
@@ -11,5 +11,8 @@
 <script src="lib/look/bootstrap/js/popper.min.js"></script>
 <script src="lib/look/bootstrap/js/bootstrap.min.js"></script>
 
+<script src="lib/SmartAlice/Ui/MessageChanelPlug.js"></script>
+<script src="lib/SmartAlice/Ui/MessagePlug.js"></script>
+<script src="lib/SmartAlice/Ui/MessagePlugBot.js"></script>
 
 
