--- a/views/Room/Message.ejs
+++ b/views/Room/Message.ejs
@@ -1,3 +1,6 @@
+<!--
+  See client side on /public/lib/SmartAlice/Ui/MessagePlug.js
+-->
 <li class="right clearfix">
 	<span class="chat-img pull-right">
 		<img src="images/<%= message.mAvatar %>" alt="User Avatar" class="img-circle">
